# pyGames

./: .gitignore  MANIFEST.in  Makefile  README.md  gitdescribe2pep440.py  mypy.ini  pyproject.toml  tox.ini
src/pygames/: __init__.py  cli_main.py
src/pygames/game_of_life/: cell.py  grid.py  interactor.py  models.py  runner.py
src/pygames/game_of_life/controllers/: cli_argparse.py  cli_controller.py
tests/: test_cell.py  test_grid.py  test_version.py
tests/game_of_life/: test_grid.py  test_interactor.py  test_runner.py
