[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pygames"
description = "Games for Funsies"
license = {text = "Unlicense"}
authors = [{name = "Kai Jie Chow", email = "kj1chow@gmail.com"}]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
urls = {Homepage = '"https://github.com/kjc1998/pyGames/"'}
requires-python = ">=3.12"
dependencies = ["typing-extensions"]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}
platforms = ["any"]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {file = ["Versionfile"]}
