[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pygames"
version = "0.1.0"
description = "Games for Funsies"
license = {text = "MIT"}
authors = [{name = "Kai Jie Chow", email = "kj1chow@gmail.com"}]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
urls = {Homepage = '"https://github.com/kjc1998/pyGames/"'}
requires-python = ">=3.12"
dependencies = [
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "pytest-mypy",
    "black",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
mypy_path = "src"
strict = true
check_untyped_defs = true
